2000-10-05  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* lib/Makefile.in:
	    "make install" did put zmailer.h into  $prefix/$prefix/include/,
	    which is "somewhat" wrong...

	* man/smtp.8, transports/smtp/smtp.c, transports/smtp/smtp.h:
	    Implemented LMTP (RCF 2033) at the smtp TA program.
	    To enable LMTP, use option '-M'.

	* scheduler/mq2.c:
	    When reporting "unknown" command, do tell things differently:
	      "Unknown command, or refused by access control;" ...

	* smtpserver/mxverify.c:
	    Fix the IPv6 nybble-reverse code to do proper in6 type reverser,
	    although an alternate (binary labels) is defined these days...

	* transports/libta/ctlopen.c:
	    See if the message to be opened is a ETRN request -- if yes,
	    just return with failure...  (manual-expirer triggers this.)

	* transports/libta/mimeheaders.c:
	    While parsing for Content-Type: parameters, allow LWSP in same
	    lines.  Full specification really calls for RFC 822 tokens along
	    with CWSP and commend handling.

	* transports/mailbox/mailbox.c:
	    Separates "From MAILER-DAEMON " from "Return-Path: <>".
	    Produces "X-Envelope-To: <...>" header.

	* ChangeLog, INSTALL, Overview, README.TCP-WRAPPER,
	  README.UPGRADING, compat/sendmail/sendmail.c, doc/guides/configure,
	  doc/guides/smtp-etrn, include/zmsignal.h, lib/hashtest.c,
	  man/smtpserver.8, proto/smtpserver.conf.in, proto/cf/aliases-new.cf,
	  proto/cf/aliases.cf, proto/cf/rrouter.cf, proto/cf/standard.cf,
	  router/prototypes.h, router/rfc822walk.c, scheduler/msgerror.c,
	  scheduler/scheduler.c, smtpserver/rfc821scn.c, transports/sm/sm.c,
	  smtpserver/smtprouter.c, transports/libta/diagnostic.c, 
	  transports/mailbox/mailbox.c, transports/smtp/smtp.c, 
	  utils/smtpserver-log-parser.pl.in, utils/pop-proxy/pop-proxy.c:
	    A great speller-bee of "propab*" -> "probab*".

2000-09-26  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* man/sm.8, transports/sm/sm.c: